--- a/www/theme.scss
+++ b/www/theme.scss
@@ -12,5 +12,53 @@ body {
       font-size: 3.0em;
       color: #d7d7d7;
     }
+
+    div.droppedFile {
+      text-align: left;
+      background-color: #F8F8F8;
+      border: 1px solid #D3D3D3;
+      border-radius: 4px;
+      margin-bottom: 10px;
+
+      &:last-child {
+        margin-bottom: 30px;
+      }
+
+      button {
+        height: 28px;
+      }
+    }
+  }
+}
+
+.align-right {
+  text-align: right;
+}
+
+
+button {
+
+  border-radius: 4px;
+  border-width: 1px;
+  min-width: 100px;
+
+  line-height: 0;
+
+  &.primary {
+    border-color: #92CA76;
+    background-color: #66FF6B;
+
+    &:hover {
+      background-color: #3CFB42;
+    }
+  }
+
+  &.danger {
+    border-color: #CC0000;
+    background-color: #FF6A6A;
+
+    &:hover {
+      background-color: #FF4949;
+    }
   }
 }
