--- a/www/components/dropTarget.tmpl.html
+++ b/www/components/dropTarget.tmpl.html
@@ -13,6 +13,9 @@
           </span>
         </div>
       </div>
+      <div class="row" ng-show="file.error">
+        <div class="col-lg-8 col-md-8 error">{{ file.error }}</div>
+      </div>
     </div>
   </div>
 </div>
