--- a/www/theme.scss
+++ b/www/theme.scss
@@ -27,6 +27,11 @@ body {
       button {
         height: 28px;
       }
+
+      div.error {
+        font-style: italic;
+        color: red;
+      }
     }
   }
 }
