--- a/www/theme.scss
+++ b/www/theme.scss
@@ -36,6 +36,18 @@ body {
   }
 }
 
+div#transactionsList {
+  div.row.filter {
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+    input {
+      width: 100%;
+      height: 30px;
+    }
+  }
+}
+
 .align-right {
   text-align: right;
 }
